--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "axios": "^0.20.0",
     "buefy": "^0.9.2",
+    "http-status": "^1.4.2",
+    "lodash": "^4.17.20",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
+    "vue-cookie": "^1.1.4",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.4.3",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vuelidate": "^0.7.5",
+    "vuex": "^3.5.1"
   },
   "version": "0.1.0",
   "devDependencies": {
