add font awesome

--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "facebook_rails_vue",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "axios": "^0.20.0",
     "buefy": "^0.9.2",
+    "font-awesome": "^4.7.0",
     "http-status": "^1.4.2",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-cookie": "^1.1.4",
