--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.12",
     "vue-cookie": "^1.1.4",
     "vue-loader": "^15.9.3",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.4.3",
     "vue-template-compiler": "^2.6.12",
     "vuelidate": "^0.7.5",
