--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.4.3",
     "vue-template-compiler": "^2.6.12",
+    "vue-turbolinks": "^2.1.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.5.1"
   },
