--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
+    "@rails/webpacker": "^5.2.1",
     "axios": "^0.20.0",
     "buefy": "^0.9.4",
     "font-awesome": "^4.7.0",
