--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -8,6 +8,7 @@ default: &default
   cache_path: tmp/cache/webpacker
   check_yarn_integrity: false
   webpack_compile_output: true
+  compile: true
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
@@ -84,11 +85,15 @@ test:
   # Compile test packs to a separate directory
   public_output_path: packs-test
 
+build: 
+    <<: *default  
+  
+
 production:
   <<: *default
 
   # Production depends on precompilation of packs prior to booting for performance.
-  compile: true
+  compile: false
 
   # Extract and emit a css file
   extract_css: true
