--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/webpacker": "^5.2.1",
     "axios": "^0.20.0",
     "buefy": "^0.9.4",
+    "debug": "^4.3.1",
     "font-awesome": "^4.7.0",
     "http-status": "^1.4.2",
     "lodash": "^4.17.20",
