--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -8,7 +8,6 @@ default: &default
   cache_path: tmp/cache/webpacker
   check_yarn_integrity: false
   webpack_compile_output: true
-  compile: true
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
@@ -18,7 +17,7 @@ default: &default
   cache_manifest: false
 
   # Extract and emit a css file
-  extract_css: true
+  extract_css: false
 
   static_assets_extensions:
     - .jpg
@@ -35,7 +34,6 @@ default: &default
     - .woff2
 
   extensions:
-    - .vue
     - .mjs
     - .js
     - .sass
@@ -84,10 +82,6 @@ test:
 
   # Compile test packs to a separate directory
   public_output_path: packs-test
-
-build: 
-    <<: *default  
-  
 
 production:
   <<: *default
